fix: update tracked change styles to not shift doc layout (#2898)

--- a/packages/superdoc/src/assets/styles/helpers/variables.css
+++ b/packages/superdoc/src/assets/styles/helpers/variables.css
@@ -181,7 +181,6 @@
   --sd-tracked-changes-insert-background: var(--sd-track-insert-bg, #399c7222);
   --sd-tracked-changes-insert-border: var(--sd-track-insert-border, #00853d);
   --sd-tracked-changes-insert-border-width: 1px;
-  --sd-tracked-changes-insert-focused-border-width: 2px;
   --sd-tracked-changes-insert-text: currentColor;
   --sd-tracked-changes-insert-decoration-line: none;
   --sd-tracked-changes-insert-decoration-thickness: 1px;
@@ -189,7 +188,6 @@
   --sd-tracked-changes-delete-background: var(--sd-track-delete-bg, #cb0e4722);
   --sd-tracked-changes-delete-border: var(--sd-track-delete-border, #cb0e47);
   --sd-tracked-changes-delete-border-width: 1px;
-  --sd-tracked-changes-delete-focused-border-width: 2px;
   --sd-tracked-changes-delete-text: currentColor;
   --sd-tracked-changes-delete-decoration-thickness: 2px;
   --sd-tracked-changes-format-border: var(--sd-track-format-border, gold);
